Fixed mobile alignment issues

--- a/src/sections/Hero/HeroStyles.module.css
+++ b/src/sections/Hero/HeroStyles.module.css
@@ -10,10 +10,6 @@
   .hero {
     max-width: 200px;
   }
-
-  .description {
-    text-align: center;
-  }
   span {
     display: flex;
     gap: 25px;
